# SMILE-simulator

./: .gitignore  AGENT_PROMPT.md  BLOCKERS.md  CLAUDE.md  Makefile  PHASE_REPORT.md  README.md  SETUP.md  docker-compose.yml  index.html  privacy.html  vercel.json
.github/workflows/: ci.yml  deploy-pages.yml
api-gateway/: .env.example  pyproject.toml
api-gateway/app/: config.py  deps.py  schemas.py
api-gateway/tests/: conftest.py  test_phase0_spike.py
app/: pubspec.yaml
app/lib/: main.dart
app/test/: api_client_test.dart  auth_service_test.dart
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.json
backend/app/: __init__.py  config.py  deps.py  main.py  observability.py  schemas.py
backend/app/jobs/: __init__.py  quota_reconciliation.py  retention.py
backend/app/ml/: face_mesh.py  photo.py  pipeline.py  prompts.py
backend/app/ml/providers/: base.py  fal.py  mock.py  registry.py
backend/app/routers/: admin.py  generate.py  leads.py  packs.py  photo_consents.py  price_estimates.py  webhooks.py
backend/app/services/: branded_delivery.py  http_retry.py  notifications.py  payment_activation.py  quota.py  retention.py  supabase_client.py  yookassa.py
backend/tests/: conftest.py  test_auth_config.py  test_branded_delivery.py  test_catalog_clinics.py  test_fal_provider.py  test_health.py  test_http_retry.py  test_lead_security.py  test_mocks.py  test_notifications.py  test_observability.py  test_payments.py  test_phase0_spike.py  test_photo_consent.py  test_pipeline.py  test_price_estimates.py  test_prompts.py  test_quota.py  test_quota_reconciliation.py  test_retention.py  test_supabase_client.py  test_yookassa.py
docs/: AGENT_LOOP_PLAN.md  AI_Smile_Simulator_Architecture_v1.0.docx  AI_Smile_Simulator_Architecture_v1.0.md  AI_Smile_Simulator_Partner_Brief_v2.4.docx  AI_Smile_Simulator_Partner_Brief_v2.4.md  Phase0_Spike_Checklist.md  SESSION_HANDOFF.md
docs/legal/: LEGAL_RELEASE_GATE.md  PRIVACY_POLICY_DRAFT.md  TERMS_DRAFT.md
mobile/: README.md  analysis_options.yaml  pubspec.yaml
mobile/lib/: main.dart
scripts/ci/: supabase_test_bootstrap.sql  verify_atomic_quota.sql  verify_quota_concurrency.sh  verify_web_forms.py
scripts/phase0/: README.md  consent_manifest_template.csv  evaluate_scorecard.py  evidence.py  run_spike.py  scorecard_template.csv
supabase/: seed_dev.sql
supabase/migrations/: 0001_init.sql  0002_rls.sql  0003_seed_styles.sql  0004_storage_photos.sql  0005_clinic_lead_currency.sql  0006_price_estimates.sql  0007_price_estimates_rls.sql  0008_waitlist.sql  0009_photo_retention.sql  0010_lead_security.sql  0011_auth_user_provisioning.sql  0012_photo_processing_consent.sql  0013_atomic_generation_quota.sql  0014_yookassa_payments.sql
web/: index.html  site.webmanifest  terms.html
web/assets/: README.md
(+60 files in other folders)
