[project]
name = "smile-simulator-api"
version = "0.1.0"
description = "AI Smile Simulator — backend (inference orchestration, auth, limits, payments)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "pyjwt>=2.8",                        # verify Supabase JWTs (HS256, stdlib hmac)
    "pillow>=10.2",                      # photo validation, resize, watermark
    "numpy>=1.26",                       # mask array ops
]

[project.optional-dependencies]
# MediaPipe is a heavy native dep; install only where server-side face detection runs.
# The pipeline falls back to a heuristic mask when it is absent (see app/ml/face_mesh.py).
ml = ["mediapipe>=0.10", "opencv-python-headless>=4.9"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's `Depends()`/`Header()` in argument defaults is the idiomatic pattern.
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
