[project]
name = "smile-simulator-api"
version = "0.1.0"
description = "AI Smile Simulator — backend (inference orchestration, auth, limits, payments)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "sentry-sdk>=2.64,<3",
    "pyjwt[crypto]>=2.8",                # verify Supabase ES256/RS256 JWTs via JWKS
    "pillow>=10.2",                      # photo validation, resize, watermark
    "numpy>=1.26",                       # mask array ops
]

[project.optional-dependencies]
# MediaPipe is a heavy native dependency and already supplies its compatible OpenCV
# distribution. Installing a second `opencv-python-*` package makes `cv2` ambiguous.
# The pipeline falls back to a heuristic mask when this extra is absent.
ml = ["mediapipe>=0.10"]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.21",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI's `Depends()`/`Header()` in argument defaults is the idiomatic pattern.
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
